--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # requirements.txt
 tensorflow==2.12.0
 pandas==1.5.3
-numpy==1.24.3
+numpy==1.23.5  # Changed to be compatible with TF 2.12
 scikit-learn==1.2.2
 loguru==0.7.0
 sqlalchemy==2.0.15
@@ -9,3 +9,5 @@ python-dotenv==1.0.0
 fastapi==0.95.2
 uvicorn==0.22.0
 gradio==3.34.0
+tensorflow-recommenders==0.7.3
+lightgbm==4.1.0
