--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -5,20 +5,25 @@ on:
     branches: [main]
 
 jobs:
-  train:
+  train-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
       - name: Install dependencies
         run: |
-          pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Set Python path
+        run: |
+          echo "PYTHONPATH=$PYTHONPATH:$GITHUB_WORKSPACE" >> $GITHUB_ENV
 
       - name: Train models
         run: |
@@ -28,14 +33,14 @@ jobs:
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
-      - name: Commit and push
+      - name: Commit and push models
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add models/
-          git commit -m "Update models" || echo "No changes"
+          git commit -m "Update trained models" || echo "No changes to commit"
           git push
 
-      - name: Trigger Render Deploy
+      - name: Trigger Render deployment
         run: |
           curl -X POST "${{ secrets.RENDER_DEPLOY_HOOK }}"
